k8s/nfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nfs
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: app-nfs
