k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: app-ip
    networking.gke.io/managed-certificates: app-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: app
      port:
        number: 8080
